test: refactor tests after code review